--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "portfolio-start",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://genier-developer.github.io/portfolio-start-project-main/",
   "dependencies": {
-    "@babel/core": "7.16.0",
+    "@babel/core": "7.18.6",
     "@pmmmwh/react-refresh-webpack-plugin": "0.5.3",
     "@svgr/webpack": "^8.1.0",
     "@testing-library/jest-dom": "5.14.1",
@@ -30,6 +31,7 @@
     "eslint-webpack-plugin": "3.1.1",
     "file-loader": "6.2.0",
     "fs-extra": "10.0.0",
+    "gh-pages": "^6.0.0",
     "html-webpack-plugin": "5.5.0",
     "identity-obj-proxy": "3.0.0",
     "jest": "27.4.3",
@@ -43,11 +45,13 @@
     "postcss-preset-env": "7.0.1",
     "prompts": "2.4.2",
     "react": "18.2.0",
+    "react-alice-carousel": "^2.7.1",
     "react-app-polyfill": "3.0.0",
     "react-dev-utils": "12.0.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-refresh": "0.11.0",
+    "react-scroll": "^1.8.9",
     "resolve": "1.20.0",
     "resolve-url-loader": "4.0.0",
     "sass-loader": "12.3.0",
@@ -58,6 +62,7 @@
     "tailwindcss": "3.0.2",
     "terser-webpack-plugin": "5.2.5",
     "typescript": "4.4.2",
+    "typewriter-effect": "^2.20.1",
     "web-vitals": "2.1.0",
     "webpack": "^5.88.2",
     "webpack-dev-server": "^4.15.1",
@@ -67,7 +72,9 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "test": "node scripts/test.js",
+    "deploy": "gh-pages -d build",
+    "predeploy": "yarn run build"
   },
   "eslintConfig": {
     "extends": [
